--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
 
     <!-- custom javascript -->
     <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
-
+   <script src="https://www.paypal.com/sdk/js?client-id=AVcT0Jl8_hDUBK5A4hFCJWAFZGNWSmVrNIN9y_0b7J7P2IQfSsBjEr8_E327LJFGn2LV_plJmKUNVXP4"></script>
     <script type="text/javascript">
         /// some script
 
