--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -10,7 +10,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title mb-4"> Billing Address </h4>
-                        <form action="" method="POST">
+                        <form action="{% url 'place_order' %}" method="POST">
                             {% csrf_token %}
                             <div class="form-row">
                                 <div class="col form-group">
@@ -29,17 +29,17 @@
                                 </div>
                                 <div class="col form-group">
                                     <label for="">Phone Number</label>
-                                    <input type="text" name="phone_no" class="form-control" required>
+                                    <input type="text" name="phone" class="form-control" required>
                                 </div>
                             </div>
                             <div class="form-row">
                                 <div class="col form-group">
                                     <label for="">Address Line 1</label>
-                                    <input type="text" name="address_1" class="form-control" required>
+                                    <input type="text" name="address_line_1" class="form-control" required>
                                 </div>
                                 <div class="col form-group">
                                     <label for="">Address Line 2</label>
-                                    <input type="text" name="address_2" class="form-control">
+                                    <input type="text" name="address_line_2" class="form-control">
                                 </div>
                             </div>
                             <div class="form-row">
@@ -50,6 +50,12 @@
                                 <div class="col form-group">
                                     <label for="">State</label>
                                     <input type="text" name="state" class="form-control" required>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="col form-group">
+                                    <label for="">Country</label>
+                                    <input type="text" name="country" class="form-control" required>
                                 </div>
                             </div>
                             <div class="form-row">
