--- a/templates/payment.html
+++ b/templates/payment.html
@@ -95,32 +95,7 @@
                         <p class="text-center mb-3">
                             <img src="{% static './images/misc/payments.png' %}" height="26">
                         </p>
-                        <div id="paypal-button-container">
-                            <script>
-                                paypal.Buttons({
-                                    style: {
-                                        color: 'blue',
-                                        shape: 'pill',
-                                        label: 'pay',
-                                        height: 40
-                                    },
-                                    createOrder: function (data, actions) {
-                                        return actions.order.create({
-                                            purchase_units: [{
-                                                amount: {
-                                                    value: '{{ grand_total|floatformat:2 }}'
-                                                }
-                                            }]
-                                        });
-                                    },
-                                    onApprove: function (data, actions) {
-                                        return actions.order.capture().then(function (details) {
-                                            alert('Transaction completed by ' + details.payer.name.given_name + '!');
-                                        });
-                                    }
-                                }).render('#paypal-button-container');
-                            </script>
-                        </div>
+                        <div id="paypal-button-container"></div>
                     </div> <!-- card-body.// -->
                 </div> <!-- card.// -->
 
@@ -132,5 +107,65 @@
     </div> <!-- container .//  -->
 </section>
 <!-- ========================= SECTION CONTENT END// ========================= -->
-
+<script>
+    function getCookie(name) {
+        let cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            const cookies = document.cookie.split(';');
+            for (let i = 0; i < cookies.length; i++) {
+                const cookie = cookies[i].trim();
+                // Does this cookie string begin with the name we want?
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+    var amount ="{{ grand_total }}"
+    var url = "{% url 'payments' %}"
+    var csrftoken = getCookie('csrftoken');
+    var orderID = "{{order.order_number}}"
+    var payment_method = 'PAYPAL'
+    paypal.Buttons({
+        style: {
+            color: 'blue',
+            shape: 'pill',
+            label: 'pay',
+            height: 40
+        },
+        createOrder: function (data, actions) {
+            return actions.order.create({
+                purchase_units: [{
+                    amount: {
+                        value: amount
+                    }
+                }]
+            });
+        },
+        onApprove: function (data, actions) {
+            return actions.order.capture().then(function (details) {
+                console.log(details);
+                sendData();
+                function sendData() {
+                    fetch(url, {
+                        method : "POST",
+                        headers: {
+                            "Content-type": "application/json",
+                            "X-CSRFToken": csrftoken,
+                        },
+                        credentials: "same-origin",
+                        body:JSON.stringify({
+                            orderID : orderID,
+                            transaction_ID : details.id,
+                            payment_method : payment_method,
+                            status : details.status,
+                        }),
+                    })
+                }
+            });
+        }
+    }).render('#paypal-button-container');
+</script>
 {% endblock %}
