add reviews and ratings

--- a/templates/order_complete.html
+++ b/templates/order_complete.html
@@ -63,7 +63,15 @@
                                         <tbody>
                                             {% for item in ordered_products %}
                                                 <tr>
-                                                    <td>{{ item.product.pro_name }}</td>
+                                                    <td>{{ item.product.pro_name }}
+                                                        <p class="text-muted small">
+      					                                    {% if item.variations.all %}
+      						                                    {% for i in item.variations.all %}
+      							                                    {{ i.variation_category | capfirst }} : {{ i.variation_value | capfirst }} <br>
+      						                                    {% endfor %}
+      					                                    {% endif %}
+      				                                    </p>
+                                                    </td>
                                                     <td class="text-center">{{ item.quantity }}</td>
                                                     <td class="text-center">${{ item.product.price }} USD</td>
                                                 </tr>
