--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- custom javascript -->
     <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
-    <script src="https://www.paypal.com/sdk/js?client-id=AdcpIG1_pwmvy-MwnUh0kKL0VtmhXMkwNLPGZS1mFO4HjGnSDg1D8hoITQWm3z5LTB4t1tUO-2QNG9wQ&currency=USD"></script>
+    <script src="https://www.paypal.com/sdk/js?client-id={{ PAYPAL_CLIENT_ID }}&currency=USD"></script>
     <script type="text/javascript">
         /// some script
 
